--- a/assets/index.html
+++ b/assets/index.html
@@ -9,15 +9,29 @@
 </head>
 <body>
     <nav id="navbar">
-        <h1 class="name header-big">Your Name</h1>
+        <h1 class="name header-big">Jake Kravas</h1>
         <ul>
             <li><a href="index.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <div class="container">
-        
-    </div>
+    <section id="showcase">
+        <div class="showcase-container">
+            <h1 class="header-big">About Me</h1>
+            <div class="about-upper">
+                <img src="images/Sage_2.jpg" alt="Sage">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis voluptatum rerum velit numquam autem ea maiores perspiciatis nam minima eius dignissimos, consequatur debitis sed, sapiente earum, possimus dicta. Exercitationem, ex. Temporibus, voluptatibus nesciunt perferendis molestiae fugiat maiores placeat doloremque itaque autem odio. Facilis possimus ad delectus mollitia necessitatibus, esse accusantium?</p>
+            </div>
+            <div class="about-lower">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nostrum porro unde temporibus quos odio numquam assumenda eius quibusdam totam. Dignissimos sapiente molestiae voluptatibus dolorem! 
+                <div class="temporary-line-height"> <br> </div>
+                Animi, enim fugiat id accusamus alias vel aut veniam vitae amet laudantium corporis nisi sunt architecto repellat quibusdam cum ipsa error sed veritatis molestias aspernatur.</p>
+            </div>
+        </div>
+    </section>
+    <footer id="footer">
+        <p>Copyright &copy;</p>
+    </footer>
 </body>
 </html>
