added footer to portfolio page

--- a/assets/contact.html
+++ b/assets/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav id="navbar">
-        <h1 class="name header-big">Your Name</h1>
+        <h1 class="name header-big">Jake Kravas</h1>
         <ul>
             <li><a href="index.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
