--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <nav id="navbar">
-        <h1 class="name header-big">Your Name</h1>
+        <h1 class="name header-big">Jake Kravas</h1>
         <ul>
             <li><a href="index.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <div class="container">
-        
-    </div>
+    <footer id="footer">
+        <p>Copyright &copy;</p>
+    </footer>
 </body>
 </html>
