added footer to contact page

--- a/assets/contact.html
+++ b/assets/contact.html
@@ -16,8 +16,8 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <div class="container">
-        
-    </div>
+    <footer id="footer">
+        <p>Copyright &copy;</p>
+    </footer>
 </body>
 </html>
