added contact box (same layout as about me box)

--- a/assets/contact.html
+++ b/assets/contact.html
@@ -16,6 +16,11 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+    <section id="showcase">
+        <div class="showcase-container">
+            <h1 class="header-big">Contact</h1>
+        </div>
+    </section>
     <footer id="footer">
         <p>Copyright &copy;</p>
     </footer>
