--- a/assets/contact.html
+++ b/assets/contact.html
@@ -19,6 +19,23 @@
     <section id="showcase">
         <div class="showcase-container">
             <h1 class="header-big">Contact</h1>
+            <div id="contact-form">
+                <form action="">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" name="name" id="name" placeholder="John Smith">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email" placeholder="example@gmail.com">
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                    </div>
+                    <button class="btn">Submit</button>
+                </form>
+            </div>
         </div>
     </section>
     <footer id="footer">
