--- a/assets/contact.html
+++ b/assets/contact.html
@@ -18,7 +18,7 @@
     </nav>
     <section id="showcase">
         <div class="showcase-container">
-            <h1 class="header-big">Contact</h1>
+            <h1 class="header-big content-header">Contact</h1>
             <div id="contact-form">
                 <form action="">
                     <div class="form-group">
