--- a/assets/index.html
+++ b/assets/index.html
@@ -18,7 +18,7 @@
     </nav>
     <section id="showcase">
         <div class="showcase-container">
-            <h1 class="header-big">About Me</h1>
+            <h1 class="header-big content-header">About Me</h1>
             <div class="about-upper">
                 <img src="images/Sage_2.jpg" alt="Sage">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis voluptatum rerum velit numquam autem ea maiores perspiciatis nam minima eius dignissimos, consequatur debitis sed, sapiente earum, possimus dicta. Exercitationem, ex. Temporibus, voluptatibus nesciunt perferendis molestiae fugiat maiores placeat doloremque itaque autem odio. Facilis possimus ad delectus mollitia necessitatibus, esse accusantium?</p>
