arranged placeholder photos into columns

--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -17,23 +17,24 @@
         </ul>
     </nav>
     <section id="showcase">
-        <!-- <div class="portfolio-container"> -->
         <div class="showcase-container">
-            <h1 class="header-big content-header">Portfolio</h1>
-            <div class="box">
-                <h2 class="pf-label">Hangman</h2>
-            </div>
-            <div class="box">
-                <h2 class="pf-label">RPG Game</h2>
-            </div>
-            <div class="box">
-                <h2 class="pf-label">Trivia game</h2>
-            </div>
-            <div class="box">
-                <h2 class="pf-label">Rutgers Info Widget</h2>
-            </div>
-            <div class="box">
-                <h2 class="pf-label">Rock Paper Scissors</h2>
+        <h1 class="header-big content-header">Portfolio</h1>
+            <div class="portfolio-container">
+                <div class="box">
+                    <h2 class="pf-label">Hangman</h2>
+                </div>
+                <div class="box">
+                    <h2 class="pf-label">RPG Game</h2>
+                </div>
+                <div class="box">
+                    <h2 class="pf-label">Trivia game</h2>
+                </div>
+                <div class="box">
+                    <h2 class="pf-label">Rutgers Info Widget</h2>
+                </div>
+                <div class="box">
+                    <h2 class="pf-label">Rock Paper Scissors</h2>
+                </div>
             </div>
         </div>
     </section>
