Added comment for Navbar

--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -8,6 +8,8 @@
     <title>My Portfolio</title>
 </head>
 <body>
+
+    <!-- Navbar -->
     <nav id="navbar">
         <h1 class="name header-big">Jake Kravas</h1>
         <ul>
