added HTML comment for main display area

--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -18,6 +18,8 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+
+    <!-- Main display area -->
     <section id="showcase">
         <div class="showcase-container">
         <h1 class="header-big content-header">Portfolio</h1>
