--- a/assets/index.html
+++ b/assets/index.html
@@ -8,6 +8,8 @@
     <title>My Portfolio</title>
 </head>
 <body>
+
+    <!-- Navbar -->
     <nav id="navbar">
         <h1 class="name header-big">Jake Kravas</h1>
         <ul>
@@ -16,6 +18,8 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+
+    <!-- Main display area -->
     <section id="showcase">
         <div class="showcase-container">
             <h1 class="header-big content-header">About Me</h1>
