added footer comments to all three HTML documents

--- a/assets/contact.html
+++ b/assets/contact.html
@@ -8,6 +8,8 @@
     <title>My Portfolio</title>
 </head>
 <body>
+
+    <!-- Navbar -->
     <nav id="navbar">
         <h1 class="name header-big">Jake Kravas</h1>
         <ul>
@@ -16,6 +18,8 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+
+    <!-- Main display area -->
     <section id="showcase">
         <div class="showcase-container">
             <h1 class="header-big content-header">Contact</h1>
@@ -38,6 +42,8 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
     <footer id="footer">
         <p>Copyright &copy;</p>
     </footer>
