--- a/assets/index.html
+++ b/assets/index.html
@@ -34,6 +34,8 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
     <footer id="footer">
         <p>Copyright &copy;</p>
     </footer>
