--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -42,6 +42,8 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
     <footer id="footer">
         <p>Copyright &copy;</p>
     </footer>
