Corrected file location for image in about me section of index.html

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div class="showcase-container">
             <h1 class="header-big content-header">About Me</h1>
             <div class="about-upper">
-                <img src="images/Sage_2.jpg" alt="Sage">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis voluptatum rerum velit numquam autem ea maiores perspiciatis nam minima eius dignissimos, consequatur debitis sed, sapiente earum, possimus dicta. Exercitationem, ex. Temporibus, voluptatibus nesciunt perferendis molestiae fugiat maiores placeat doloremque itaque autem odio. Facilis possimus ad delectus mollitia necessitatibus, esse accusantium?</p>
+                <img src="assets/images/Sage_2.jpg" alt="Sage">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis voluptatum rerum velit numquam afutem ea maiores perspiciatis nam minima eius dignissimos, consequatur debitis sed, sapiente earum, possimus dicta. Exercitationem, ex. Temporibus, voluptatibus nesciunt perferendis molestiae fugiat maiores placeat doloremque itaque autem odio. Facilis possimus ad delectus mollitia necessitatibus, esse accusantium?</p>
             </div>
             <div class="about-lower">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nostrum porro unde temporibus quos odio numquam assumenda eius quibusdam totam. Dignissimos sapiente molestiae voluptatibus dolorem! 
